[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "NoSuspend"
readme = "ReadMe.md"
description = "A library to make system not to go into powersaving mode when the program is doing work."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Environment :: X11 Applications",
	"Environment :: X11 Applications :: Gnome",
	"Environment :: X11 Applications :: GTK",
	"Environment :: X11 Applications :: KDE",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: System :: Systems Administration",
]
keywords = ["power management", "util", "suspend", "stand-by", "ACPI", "S3", "S1", "hibernation"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	'dbus-pytho; platform_system=="Linux"'
]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/NoSuspend.py"

[project.scripts]
NoSuspend = "NoSuspend:main"
caffeinate = "NoSuspend:main"

[tool.setuptools]
zip-safe = true
py-modules = ["NoSuspend"]
include-package-data = false

[tool.setuptools_scm]
